--- a/js-primer-todo-with-react/src/styles/src/apps/todo.css
+++ b/js-primer-todo-with-react/src/styles/src/apps/todo.css
@@ -4,6 +4,7 @@
   border-top: solid 5px black;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
   padding: 10px;
   box-shadow:0 3px 5px cadetblue;
 }
