--- a/js-primer-todo-with-react/src/styles/src/apps/todo.css
+++ b/js-primer-todo-with-react/src/styles/src/apps/todo.css
@@ -1,26 +1,40 @@
-.todo {
-  text-align: center;
-  width: 500px;
-  border-top: solid 5px black;
+li {
+  list-style: none;
+  float: left;
+}
+
+.todo__button {
   margin-left: auto;
   margin-right: auto;
+  height: 125px;
+  width: 40px;
+  position: relative;
+  top: 10px;
+  right: 40px;
+}
+
+.todo__card {
+  text-align: center;
+  width: 500px;
+  height: 100px;
+  border-top: solid 5px black;
   margin-top: 10px;
   padding: 10px;
   box-shadow:0 3px 5px cadetblue;
 }
 
-.todo__text {
+.todo__card__text {
   font-size: medium;
 }
 
-.todo__date {
+.todo__card__date {
   font-size: small;
 }
 
-.todo__done {
+.todo__card__done {
   background-color: rgb(87, 87, 87);
 }
 
-.todo__doing {
+.todo__card__doing {
   background-color: white;
 }
