--- a/js-primer-todo-with-react/src/styles/src/apps/todo.css
+++ b/js-primer-todo-with-react/src/styles/src/apps/todo.css
@@ -1,25 +1,40 @@
-li {
+ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
-  float: left;
+}
+
+li {
+  position: relative;
+  font-size: 24px;
+  border-bottom: 1px solid #ededed;
+  padding: 16px;
 }
 
 .todo__button {
-  margin-left: auto;
-  margin-right: auto;
-  height: 125px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background: none;
+  font-size: 100%;
+  vertical-align: baseline;
+  color: crimson;
+  position: absolute;
+  top: 0;
+  right: 10px;
+  bottom: 0;
   width: 40px;
-  position: relative;
-  top: 10px;
-  right: 40px;
+  height: 40px;
 }
 
 .todo__card {
-  text-align: center;
-  width: 500px;
-  height: 100px;
+  position: relative;
+  width: 100%;
   border-top: solid 5px black;
   margin-top: 10px;
-  padding: 10px;
+  color: inherit;
+  box-sizing: border-box;
+  padding: 16px 16px 16px 60px;
   box-shadow:0 3px 5px cadetblue;
 }
 
